8177474: Do not emit warnings when illegal access is allowed by --add-exports/--add-opens
Reviewed-by: chegar, mchung